Kashmiri translation needs to be checked; removed language templates <Kashmiri#49636>

--- a/wiki/Kashmiri.wikitext
+++ b/wiki/Kashmiri.wikitext
@@ -7,22 +7,59 @@
 
 ==== Translations ====
 
-*{{fr}}: [[Kashmiri]] ''m/f'' (1), [[kashmiri]] ''m'' (2)
-*Hindi: [[कश्मीरी]] (1, 2)
+'''person'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: Kashmiri ''m and f''
+*Hindi: [[कश्मीरी]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''language'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: kashmiri ''m''
+*Hindi: [[कश्मीरी]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above, removing the numbers.
+
 *Kashmiri: [[کشمیرى]], [[कश्मीरी]]
 
 ===Adjective===
 '''Kashmiri'''
 
-# Of or pertaining to the people [[Kashmir]] or the Kashmiri language.
+#Of or pertaining to the people [[Kashmir]] or the Kashmiri language.
 
 ==== Translations ====
 
-*{{fr}}: [[kashmiri]] ''m/f''
+*French: [[kashmiri]] ''m and f''
 *Hindi: [[कश्मीरी]]
 
-===See also===
+===Related terms===
 *[[Kashmir]]
+
+===See also===
 *[[w:Kashmiri language|Wikipedia article on Kashmiri]]
 
 [[fr:kashmiri]]
