dewikified "kashmiri" <Kashmiri#49636>

--- a/wiki/Kashmiri.wikitext
+++ b/wiki/Kashmiri.wikitext
@@ -53,7 +53,7 @@ The translations below need to be checked by native speakers and inserted into t
 
 ==== Translations ====
 
-*French: [[kashmiri]] ''m and f''
+*French: kashmiri ''m and f''
 *Hindi: [[कश्मीरी]]
 
 ===Related terms===
