--- a/wiki/oncoming.wikitext
+++ b/wiki/oncoming.wikitext
@@ -9,6 +9,7 @@ Moving toward one.
  Runaway [[carriage]]s collide with an oncoming [[train]].
  Florida is usually among the first Miami areas to be evacuated before an oncoming hurricane.
 
+{{ExampleWikimedia}}
 
 [[Synonym]]s: [[approaching]], [[moving]], [[onset]]
 
