--- a/wiki/Lao.wikitext
+++ b/wiki/Lao.wikitext
@@ -6,7 +6,7 @@
 ====Translations====
 *Bulgarian: [[лаосец]] ''m''
 *[[Chinese]]:[[老挝人]](1),[[老挝语]](2)
-*[[French]]: [[Laotien]] (1, 2)
+*[[French]]: [[Laotien]] ''m'' (1), [[Laotienne]] ''f'' (1), [[laotien]] ''m'' (2)
 *[[German]]: [[Laote]] ''m'' (1), [[Laotin]] ''f'' (1), Lao ''n'' (2)
 *Lao: [[ລາວ]] (2)
 *[[Spanish]]: [[laosiano]] (1), lao ''pl'' (1), Lao (2)
@@ -18,7 +18,7 @@
 ====Translations====
 *Bulgarian: [[лаоски]] ''m'' & ''pl''
 *[[Chinese]]:[[老挝的]]
-*[[French]]: lao, (the people:) [[laotien]]
+*[[French]]: lao (the people), [[laotien]] ''m'', [[laotienne]] ''f''
 *[[German]]: [[laotisch]]
 *[[Spanish]]: [[laosiano]], [[de Laos]]
 
