--- a/wiki/oncoming.wikitext
+++ b/wiki/oncoming.wikitext
@@ -3,7 +3,7 @@
 The beginning or early stages.
 
 == Adjective ==
-
+{{ExampleWikimedia}}
 Moving toward one.
  Later some manufacturers chose to have the driver's seat nearest the centre of the road in order to look out for oncoming traffic.
  Runaway [[carriage]]s collide with an oncoming [[train]].
