dewikified "kazakh"; some translations need to be checked <Kazakh#36024>

--- a/wiki/Kazakh.wikitext
+++ b/wiki/Kazakh.wikitext
@@ -1,15 +1,50 @@
 ===Noun===
 '''Kazakh'''
 
-#The national language of [[Kazakhstan]].
 #A person from [[Kazakhstan]] or of Kazakh descent.
+#The national language of [[Kazakhstan]].
 
 ====Translations====
+
+'''person'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Dutch: [[Kazachs]]
+*French: Kazakh ''m'', [[Kazakhe]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''language'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: kazakh ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.
+
 *Chinese: [[哈萨克人]]
-*{{nl}}: [[Kazachs]] (2)
-*{{fr}}: [[kazakh]] ''m'' (1), [[Kazakh]] ''m'' (2), [[Kazakhe]] ''f'' (2)
 *German: [[Kasache]] ''m'', [[Kasachin]] ''f''
-*[[Romanica]]: [[kazakh]]
+*[[Romanica]]: kazakh
 *Spanish: [[kazajo]]
 
 ===Adjective===
@@ -20,7 +55,7 @@
 ====Translations====
 
 *Chinese: [[哈萨克的]]
-*French: [[kazakh]] ''m'', [[kazakhe]] ''f''
+*French: kazakh ''m'', [[kazakhe]] ''f''
 *German: [[kasachisch]]
-*[[Romanica]]: [[kazakh]]
+*[[Romanica]]: kazakh
 *Spanish: [[kazajo]]
