--- a/wiki/Karelian.wikitext
+++ b/wiki/Karelian.wikitext
@@ -1,7 +1,9 @@
 =={{en}}==
 
 {{-noun-}}
-#:'''Karelian'''; language closely related to [[Finnish]], spoken in [[Karelia]], [[Rusland]] and [[Finland]].
+'''Karelian'''
+
+#A language closely related to [[Finnish]], spoken in [[Karelia]], [[Rusland]] and [[Finland]].
 
 {{-trans-}}
 {| border=0  width=100%
@@ -28,7 +30,7 @@
 | width=1% |
 |bgcolor="{{bgclr}}" valign=top width=48%|
 {|
-:*{{fiu}}: [[Karjala]]
+:*Karelian: [[Karjala]]
 :*{{lv}}: [[Karēļu]]
 :*{{lt}}: [[Karelų]], [[kareliškai]]
 :*{{chm}}: [[Карелий]]
