--- a/wiki/Lithuanian.wikitext
+++ b/wiki/Lithuanian.wikitext
@@ -6,6 +6,7 @@
 #:*[[Chinese]]: [[立陶宛语]] 
 #:*{{nl}}: [[Litouws]]
 #:*Finnish: [[liettualainen]]
+#:*French: [[lithuanien]]/[[lituanien]] ''m''
 #:*German: [[Litauisch]] ''n''
 #:*Indonesian: [[bahasa]] [[Lithuania]]
 #:*Japanese: [[リトアニア語]]
@@ -20,6 +21,7 @@
 #:*Catalan: [[lituà]] ''m''
 #:*[[Chinese]]: [[立陶宛人]] 
 #:*Finnish: [[liettuan kieli]]
+#:*French: [[Lithuanien]]/[[Lituanien]] ''m'', [[Lithuanienne]]/[[Lituanienne]] ''f''
 #:*German: [[Litauer]] ''m'', [[Litauerin]] ''f''
 #:*Indonesian: [[orang]] [[Lithuania]]
 #:*Japanese: [[リトアニア人]]
@@ -36,6 +38,7 @@
 #:*Catalan: [[lituà]] ''m'', [[lituana]] ''f''
 #:*[[Chinese]]: [[立陶宛的]] 
 #:*Finnish: [[liettualainen]]
+#:*French: [[lithuanien]]/[[lituanien]] ''m'', [[lithuanienne]]/[[lituanienne]] ''f''
 #:*German: [[litauisch]]
 #:*Japanese: リトアニアの～、リトアニア人［語］の～、リトアニア[的な]～
 #:*Latvian: [[Lietuvas]] (''of Lithuania''), [[lietuviešu]] (''of Lithuanians'')
