dewikified "kabyle"; removed template & enc info <Kabyle#59440>

--- a/wiki/Kabyle.wikitext
+++ b/wiki/Kabyle.wikitext
@@ -2,12 +2,40 @@
 ===Noun===
 '''Kabyle'''
 
-# a [[w:Northern Berber languages|Northern Berber language]] of the [[w:Berber languages|Berber]] branch of the [[w:Afro-Asiatic languages|Afro-Asiatic language]] family. There are 2,537,000 speakers in [[Algeria]], and another 537,000 speakers in [[France]] and [[Belgium]].
-# Member of the Kabyle people.
+#A [[w:Northern Berber languages|Northern Berber language]] of the [[Berber]] branch of the [[w:Afro-Asiatic languages|Afro-Asiatic language]] family.
+#A member of the ethnic group that speaks this language.
 
 ==== Translations ====
 
-*{{fr}}: [[kabyle]] ''m'' (1), [[Kabyle]] ''m/f'' (2)
+'''language'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: kabyle ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''person'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: Kabyle ''m and f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
 ===See also===
 *[[w:Kabyle|Wikipedia article on Kabyle]]
