French: [[live]] ''m'' <Livonian#54648>

--- a/wiki/Livonian.wikitext
+++ b/wiki/Livonian.wikitext
@@ -16,7 +16,7 @@
 *English: Livonian
 *Estonian: [[liivi keel]]
 *Finnish: [[liivi]]
-*French: [[Live]]
+*French: [[live]] ''m''
 *[[Galician]]: [[Livonio]]
 *Hungarian: [[Lív]]
 *Irish: [[Líovlainnis]]
