--- a/wiki/Malayalam.wikitext
+++ b/wiki/Malayalam.wikitext
@@ -9,11 +9,12 @@ From [[Malaya]], the name of a mountain range, from a Dravidian source such as T
 # Language spoken in the state of [[Kerala]], [[India]]
 
 ====Translations====
+
 #:*{{chr}}: [[ᎹᎴᏯᎵ]]
 #:*{{cs}}: [[Malajalámský]]
 #:*{{en}}: '''Malayalam'''
 #:*{{fi}}: [[malajalam]]
-#:*{{fr}}: '''Malayalam'''
+#:*{{fr}}: '''malayalam''' ''m''
 #:*{{de}}: '''Malayalam'''
 #:*{{el}}: [[Μαλαγιαλαμικά]]
 #:*{{hi}}: [[मलयालम]]
