*French: [[Malgache]] ''m/f'' (1), [[malgache]] ''m'' (2) <Malagasy#36166>

--- a/wiki/Malagasy.wikitext
+++ b/wiki/Malagasy.wikitext
@@ -1,11 +1,12 @@
 ===Noun===
 '''Malagasy'''
 #A person from [[Madagascar]] or of Malagasy descent.
+# A language spoken in [[Madagascar]].
 
 ====Translations====
 
 *Chinese: [[马尔加什人]] (mǎrjiāshí-rén)
-*French: [[Malgache]]
+*French: [[Malgache]] ''m/f'' (1), [[malgache]] ''m'' (2)
 *German: [[Madagasse]] ''m'', [[Madagassin]] ''f''
 
 ===Adjective===
