+proper n, plural forms of adj <italien#66449>

--- a/wiki/italien.wikitext
+++ b/wiki/italien.wikitext
@@ -1,13 +1,18 @@
 ==French==
 ===Adjective===
-'''italien''' ''m'', '''[[italienne]]''' ''f''
+'''italien''' ''m'' (''f'' '''[[italienne]]''', ''m plural'' '''italiens''', ''f plural'' '''italiennes''')
 
-# [[Italian]]
+#[[Italian]]
 
 ===Noun===
 '''italien''' ''m''
 
-# [[Italian]] language
+#[[Italian]] (''language'')
+
+===Proper noun===
+'''Italien''' ''m'' (''f'' '''Italienne''')
+
+#[[Italian]] (''person'')
 
 ===Related terms===
 *[[italianiser]]
