corrected fr: and added gender; translations need to be tabulated appropriately; inflexions; v -> vt <shampoo#66447>

--- a/wiki/shampoo.wikitext
+++ b/wiki/shampoo.wikitext
@@ -7,9 +7,45 @@ From the [[Hindi]] ''champo'', the [[imperative]] form of the verb ''champna'', 
 # A [[commercial]] [[liquid]] [[soap]] product for [[wash]]ing [[hair]] or other fibres, such as [[carpet]]s.
 
 ====Translations====
+
+'''massage'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''product for washing the hair or other fibres'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[shampooing]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above
+
 *Chinese: [[香波]] (xiangbo)
-*French: [[shampoing]]
 *Japanese: [[シャンプー]]
 
-===Verb===
-# To wash one's hair with shampoo.
+===Transitive verb===
+'''to shampoo''' ('''shampooing''', '''shampooed''', '''shampooed''')
+
+# To wash (hair) with shampoo.
