--- a/wiki/chutney.wikitext
+++ b/wiki/chutney.wikitext
@@ -3,4 +3,6 @@
 From the [[Hindi]] ''chatni''
 
 ===Noun===
-# A [[sweet]]-and-[[spicy]] [[condiment]], originally from eastern [[India]], which contains significant amounts of fresh green [[chili pepper]]s, along with any of a wide variety of [[fruit]]s and [[vegetable]]s.
+'''chutney''' (''[[uncountable]]'')
+
+# A [[sweet]] and [[spicy]] [[condiment]], originally from eastern [[India]], containing significant amounts of fresh green [[chili pepper]]s along with any of various [[fruit]]s and [[vegetable]]s.
