--- a/wiki/Manx.wikitext
+++ b/wiki/Manx.wikitext
@@ -11,7 +11,7 @@ From ''Mansk'', Old Norse adjectival form of ''[[Mon]]'' "Man".
 *Chinese: [[马恩语]] (mǎēn-yǔ, 1)
 *Dutch: [[Manx-Gaelisch]] (1)
 *Esperanto: [[manksa]] (1)
-*French: [[mannois]], [[manxois]] (1)
+*French: [[mannois]], [[manxois]] ''m'' (1)
 *German: [[Manx]], [[Manx-Gälisch]] (1)
 *[[Manx]]: [[Gaelg]]
 *Polish: [[manx]] (1)
