People living in [[Maharastra]], + adj <Marathi#38321>

--- a/wiki/Marathi.wikitext
+++ b/wiki/Marathi.wikitext
@@ -2,7 +2,8 @@
 ===Noun===
 '''Marathi'''
 
-# Language spoken in the state of [[Maharastra]], [[India]]
+# Language spoken in the state of [[Maharastra]], [[India]].
+# People living in [[Maharastra]].
 
 {{-trans-}}
 {| border=0  width=100%
@@ -15,7 +16,7 @@
 :*{{de}}: [[Marathisch]]
 :*{{en}}: [[Marathi]]
 :*{{fi}}: [[marathi]]
-:*{{fr}}: [[marathe]]
+:*{{fr}}: [[marathe]] ''m'' (1), [[Marathe]] ''m/f'' (2)
 :*{{el}}: [[Μαραθικά]]
 :*{{hi}}: [[माराठी]]
 :*{{hu}}: [[Maráthi]]
@@ -38,6 +39,13 @@
 |}
 |}
 
+=== Adjective ===
+
+# Pertaining to [[Maharastra]] or its language.
+
+==== Translations ====
+
+*French: [[marathe]] ''m/f''
 
 ===See also===
 *[[w:Marathi language|Wikipedia article on Marathi]]
