/* Translations */ French: [[mongol]] ''m'', [[mongole]] ''f'' <Mongolian#36095>

--- a/wiki/Mongolian.wikitext
+++ b/wiki/Mongolian.wikitext
@@ -34,7 +34,7 @@ Originally from ''[[Mongol]]'' + ''[[-ian]]'', a translation of the [[German]] '
 *Bulgarian: [[монголски]] ''m'', ''pl''
 *Chinese: [[蒙古的]]
 *Estonian: [[Mongoolia]] (sense 1), [[Mongooliast]] (''from Mongolia''), [[mongolikeelne]] (''in the Mongolian language''), [[mongolite]] (2), [[mongoli]] (2, ''of the Mongolian language'')
-*French: [[mongol]]
+*French: [[mongol]] ''m'', [[mongole]] ''f''
 *German: [[mongolisch]]
 *Hungarian: [[mongol]]
 *Polish: [[mongolski]] ''m''
