/* Noun */ French: [[Mongol]] ''m'' (1), [[Mongole]] ''f'' (1), [[mongol]] ''m'' (2) <Mongolian#36095>

--- a/wiki/Mongolian.wikitext
+++ b/wiki/Mongolian.wikitext
@@ -92,6 +92,7 @@ Originally from ''[[Mongol]]'' + ''[[-ian]]'', a translation of the [[German]] '
 *Danish: [[Mongolsk]]
 *Farsi: [[مغولى]]
 *Finnish: [[mongoli]]
+*French: [[Mongol]] ''m'' (1), [[Mongole]] ''f'' (1), [[mongol]] ''m'' (2)
 *Greek: [[Μογγολικά]]
 *Hebrew: [[מונגולית]]
 *Icelandic: [[Mongólsk mál]], [[Mongólska]]
