--- a/wiki/Nepalese.wikitext
+++ b/wiki/Nepalese.wikitext
@@ -10,7 +10,7 @@
 ====Translations====
 
 * [[Chinese]]:[[尼泊尔人]](1), [[尼泊尔语]](2)
-* French: népalais (''language''), Népalais (''people'')
+* French: [[Népalais]] ''m'' (1), [[Népalaise]] ''f'' (1), [[népalais]] ''m'' (2)
 * German: Nepalese ''m'', [[Nepalesin]] ''f''
 * Nepalese: [[नेपाली]] (nepālī)
 * Hindi: नेपाली
@@ -23,7 +23,7 @@
 ==== Translations ====
 
 * [[Chinese]]:[[尼泊尔的]]
-* French: népalais
+* French: [[népalais]] ''m'', [[népalaise]] ''f''
 * German: [[nepalesisch]]
 * Hindi: नेपाली
 
