--- a/wiki/Nepalese.wikitext
+++ b/wiki/Nepalese.wikitext
@@ -13,7 +13,7 @@
 * French: [[Népalais]] ''m'' (1), [[Népalaise]] ''f'' (1), [[népalais]] ''m'' (2)
 * German: Nepalese ''m'', [[Nepalesin]] ''f''
 * Nepalese: [[नेपाली]] (nepālī)
-* Hindi: नेपाली
+* Hindi: [[नेपाली]] ''m'' (2)
 
 ===Adjective===
 '''Nepalese'''
@@ -25,7 +25,7 @@
 * [[Chinese]]:[[尼泊尔的]]
 * French: [[népalais]] ''m'', [[népalaise]] ''f''
 * German: [[nepalesisch]]
-* Hindi: नेपाली
+* Hindi: [[नेपाली]]
 
 [[fr:Népalais]]
 [[hi:नेपाली]]
