--- a/wiki/Nepali.wikitext
+++ b/wiki/Nepali.wikitext
@@ -1,5 +1,11 @@
+== English ==
+
 ===Proper noun===
+
 '''Nepali'''
 # Common [[language]] spoken by the people of [[Nepal]].
+
 ===See also===
-*[[Nepal]]
+
+* [[Nepalese]]
+* [[Nepal]]
