French: [[norvégien]] ''m'' (1), [[Norvégien]] ''m'' (2), [[Norvégienne]] ''f'' (2) <Norwegian#4604>

--- a/wiki/Norwegian.wikitext
+++ b/wiki/Norwegian.wikitext
@@ -13,7 +13,7 @@
 *Dutch: [[Noors]] ''n'' (1), [[Noor]] ''m'' (2), [[Noorse]] ''f'' (2)
 *[[Esperanto]]: [[norvego]], [[norvega lingvo]]
 *Finnish: [[norja]], [[norjan kieli]] (1), [[norjalainen]] (2)
-*French: [[norvégien]] ''m'' (1,2), [[norvégienne]] ''f'' (2)
+*French: [[norvégien]] ''m'' (1), [[Norvégien]] ''m'' (2), [[Norvégienne]] ''f'' (2)
 *German: [[Norwegisch]] (1), [[Norweger]] ''m'' (2), [[Norwegerin]] ''f'' (2)
 *Indonesian: [[bahasa norwegia]] (1), [[orang norwegia]] (2)
 *[[Interlingua]]: [[norvegiano]]
@@ -46,7 +46,7 @@
 *Dutch: [[Noors]]
 *[[Esperanto]]: [[norvega]]
 *Finnish: [[norjalainen]]
-*French: [[norvégien]]
+*French: [[norvégien]] ''m'', [[norvégienne]] ''f''
 *German: [[norwegisch]]
 *[[Interlingua]]: [[norvegian]]
 *Italian: [[norvegese]] ''m'', ''f''
