French: [[pashto]] ''m'' <Pashto#36963>

--- a/wiki/Pashto.wikitext
+++ b/wiki/Pashto.wikitext
@@ -1,3 +1,4 @@
+== English ==
 ===Noun===
 '''Pashto'''
 
@@ -9,7 +10,9 @@
 *[[Pushtu]]
 
 ====Translations====
+
 *Chinese: [[普什图语]]
+*French: [[pashto]] ''m''
 *[[Persian]]: [[پشتو]]
 *Pashto: [[پښتو]] (paṧto)
 
