/* Proper noun */ fr <Portuguese#2850>

--- a/wiki/Portuguese.wikitext
+++ b/wiki/Portuguese.wikitext
@@ -108,7 +108,7 @@
 *Dutch: [[Portugees]] ''m'', [[Portugese]] ''f''
 *[[Esperanto]]: [[portugalo]]
 *Finnish: [[portugalilainen]]
-*French: [[portugais]] ''m'', [[portugaise]] ''f''
+*French: [[Portugais]] ''m'', [[Portugaise]] ''f''
 *German: [[Portugiese]] ''m'', [[Portugiesin]] ''f''
 *Indonesian: [[orang Portugal]], [[orang Portugis]]
 *[[Interlingua]]: [[portugese]]
