--- a/wiki/Punjabi.wikitext
+++ b/wiki/Punjabi.wikitext
@@ -7,7 +7,9 @@
 *[[Panjabi]]
 
 ====Translations====
-* French: pendjabi
+
+*French: [[pendjabi]] ''m''
+*Hindi: [[पंजाबी]] ''f''
 *Punjabi ([[Gurmukhi]]): [[ਪੰਜਾਬੀ]] (paṁjābī) 
 *Punjabi ([[Shahmukhi]]): [[پنجابی]] (panjābī)
 *Punjabi ([[Devanagari]]): [[पंजाबी]] (paṁjābī)
