fr, hi <Panjabi#38338>

--- a/wiki/Panjabi.wikitext
+++ b/wiki/Panjabi.wikitext
@@ -7,6 +7,9 @@
 *[[Punjabi]]
 
 ====Translations====
+
+*French: [[pendjabi]] ''m''
+*Hindi: [[पंजाबी]] ''f''
 *Punjabi ([[Gurmukhi]]): [[ਪੰਜਾਬੀ]] (paṁjābī) 
 *Punjabi ([[Shahmukhi]]): [[پنجابی]] (panjābī)
 *Punjabi ([[Devanagari]]): [[पंजाबी]] (paṁjābī)
