French: [[romanche]] ''m'' <Romansh#49635>

--- a/wiki/Romansh.wikitext
+++ b/wiki/Romansh.wikitext
@@ -6,3 +6,7 @@
 
 <!-- may also signify a people / culture -->
 # A minority [[romance language]] of [[Switzerland]].
+
+==== Translations ====
+
+*French: [[romanche]] ''m''
