incorrect use of kensho -> dokusan /* Koan practice */ <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -65,13 +65,13 @@ Zen meditation is called [[zazen]]. Zazen translates approximately to "sitting m
 In Soto, [[shikantaza]] meditation, sometimes translated as "just-sitting," i.e., a meditation with no objects, anchors, "seeds," or content, is the primary form of practice. Considerable textual, philosophical, and phenomenological justification of this practice can be found in Dogen's Shobogenzo.
 
 ===Koan practice===
-The Zen schools (especially but not exclusively Rinzai) are associated with [[koan|koans]] (Japanese; Chinese: gongan; Korean: gong'an). The term originally referred to legal cases in [[Tang Dynasty|Tang-dynasty]] China. In some sense, a koan embodies a realized principle, or law of reality. Koans often appear paradoxical but are not meant to be apprehended rationally. Rather, Zen practitioners are said to recognize and actualize a koan in experience. An example of a Zen koan: "Two hands clap and there is a sound. What is the sound of one hand?". It's sometimes said that after diligent practice, the practitioner and the koan become one.
+The Zen schools (especially but not exclusively Rinzai) are associated with [[koan|koans]] (Japanese; Chinese: gongan; Korean: gong'an). The term originally referred to legal cases in [[Tang Dynasty|Tang-dynasty]] China. In some sense, a koan embodies a realized principle, or law of reality. Koans often appear paradoxical but are not meant to be apprehended rationally. Rather, Zen practitioners are said to recognize and actualize a koan in experience. An example of a Zen koan: "Two hands clap and there is a sound. What is the sound of one hand?". It is sometimes said that after diligent practice, the practitioner and the koan become one.
 
 According to some interpretations, koans are by design absolute nonsense. This is in an effort to exhaust the intellect. Once the intellect is no longer relied upon, then enlightenment is more readily received or apprehended. However, other accounts hold that the problem posed by a koan is quite serious, and there there is a sharp distinction between right and wrong answers to it.
 
 The principle in more detail, is that the only way one can stop the intellect from getting in the way of achieving enlightment is to force it to consider impossible scenarios (the koans) until it finally realizes the futility and gives up entirely. Once the intellect is out of the way, enlightenment is more readily attained. Though Rinzai aims for a "sudden" enlightenment, this usually only comes after a great deal of preparation.
 
-The Zen student's mastery of a given koan is presented to the teacher (Roshi) in a private session called "Kensho". The answer to a koan is more dependent on "how" it is answered rather than the correctness of the answer. Or, to put it somewhat differently, the answer is a function not merely of a reply, but of a whole modification of the student's experience; he or she must ''live'' the answer to the koan rather than merely offering a correct statement.
+The Zen student's mastery of a given koan is presented to the teacher (Roshi) in a private session called [[dokusan]]. The answer to a koan is more dependent on "how" it is answered rather than the correctness of the answer. Or, to put it somewhat differently, the answer is a function not merely of a reply, but of a whole modification of the student's experience; he or she must ''live'' the answer to the koan rather than merely offering a correct statement.
 
 There is no single correct answer for any given koan, though there may be a set of correct and a set of incorrect answers, and indeed students in a cheating mindset would often compile books of accepted answers to Koans to help prepare for the interview; these collections are of great value to modern scholarship on the subject.
 
