French: [[swahili]] ''m'' <Swahili#36419>

--- a/wiki/Swahili.wikitext
+++ b/wiki/Swahili.wikitext
@@ -10,6 +10,7 @@
 ====Translations====
 *Bulgarian: [[суахили]] (swakhili)
 *Chinese: [[斯瓦希利语]]
+*French: [[swahili]] ''m''
 *Dutch: Swahili
 *German: [[Suaheli]]
 *Japanese: [[スワヒリ語]] (suwahiri-go)
