--- a/wiki/Tamil.wikitext
+++ b/wiki/Tamil.wikitext
@@ -2,8 +2,8 @@
 ===Noun===
 '''Tamil''' ([[Tamils]])
 
-# Language spoken in the state of [[Tamil Nadu]], [[India]] and in [[Sri Lanka]], [[Singapore]], [[Malaysia]]
-# A person of Tamil descent
+# Language spoken in the state of [[Tamil Nadu]], [[India]] and in [[Sri Lanka]], [[Singapore]], [[Malaysia]].
+# A person of Tamil descent.
 
 ====Synonyms====
 *[[Tamilian]] (2)
@@ -16,7 +16,8 @@
 ====Translations====
 
 * Chinese: [[泰米尔语]] (1)
-* Hindi: तमिल
+* French: [[tamoul]] ''m'' (1), [[Tamoul]] ''m'' (2), [[Tamoule]] ''f'' (2)
+* Hindi: [[तमिल]]
 * Japanese: [[タミル語]] (タミルご, tamiru-gō), tamiru-gō) (1), [[タミル人]] (タミルじん, tamiru-jin) (2)
 * [[Persian]]: [[تاميل]] (Tamil)
 * Spanish: tamil
@@ -29,6 +30,8 @@
 # of or pertaining to the Tamil people, culture, or language
 
 ====Translations====
+
+*French: [[tamoul]] ''m'', [[tamoule]] ''f''
 *Spanish: tamil
 
 [[nl:Tamil]]
