--- a/wiki/Telugu.wikitext
+++ b/wiki/Telugu.wikitext
@@ -5,6 +5,6 @@ Telugu belongs to the family of Dravidian languages and is the official language
 
 ====Translations====
 * Chinese: [[泰卢固语]]
-* French: [[télougou]]
+* French: [[télougou]] ''m''
 * Hindi: [[तेलुगु]]
 * Telugu: [[తెలుగు]]
