/* Noun */ um, Sanskrit isn't a living language <Sanskrit#66452>

--- a/wiki/Sanskrit.wikitext
+++ b/wiki/Sanskrit.wikitext
@@ -1,11 +1,11 @@
 == English ==
 
+{{-en-}}
 === Noun ===
-
-# Language spoken in [[India]].
-
-==== Translation ====
-
+# A classical language important to [[Hinduism]], an official language of [[India]].
+===Translation===
 *French: [[sanskrit]] ''m''
 *Hindi: [[संस्कृत]]
 *Sanskrit: [[संस्कृत]]
+===See Also===
+*[[w:Sanskrit article]] in Wikipedia
