--- a/wiki/Sanskrit.wikitext
+++ b/wiki/Sanskrit.wikitext
@@ -1,5 +1,3 @@
-== English ==
-
 {{-en-}}
 === Noun ===
 # A classical language important to [[Hinduism]], an official language of [[India]].
@@ -8,4 +6,4 @@
 *Hindi: [[संस्कृत]]
 *Sanskrit: [[संस्कृत]]
 ===See Also===
-*[[w:Sanskrit article]] in Wikipedia
+*[[w:Sanskrit|Sanskrit article]] in Wikipedia
