--- a/wiki/Ukrainian.wikitext
+++ b/wiki/Ukrainian.wikitext
@@ -50,16 +50,16 @@
 *{{hr}}: [[Ukrajinski]]
 *{{cs}}: [[Ukrajinský]]
 *{{da}}: [[Ukrainsk]]
-*{{nl}}: [[Oekraïens]] {{n}}
+*{{nl}}: [[Oekraïens]] ''n''
 *{{et}}: [[Ukraina]]
 *{{fo}}: [[Ukrainskt]]
 *{{fa}}: [[&#1575;&#1608;&#1603;&#1585;&#1575;&#1610;&#1606;&#1609;]]
 *{{fi}}: [[ukraina]]
-*{{fr}}: [[Ukrainien]] {{m}}
+*{{fr}}: [[ukrainien]] ''m''
 *{{fy}}: [[Ukraynsk]]
 *{{ga}}: [[Ucraíno]]
 *{{ka}}: [[&#4323;&#4313;&#4320;&#4304;&#4312;&#4316;&#4323;&#4314;&#4312;]]
-*{{de}}: [[Ukrainisch]] {{n}}
+*{{de}}: [[Ukrainisch]] ''n''
 *{{el}}: [[&#927;&#965;&#954;&#961;&#945;&#957;&#953;&#954;&#940;]]
 *{{el}}: [[&#1488;&#1493;&#1511;&#1512;&#1488;&#1497;&#1504;&#1497;&#1514;]]
 *{{hi}}: [[&#2351;&#2370;&#2325;&#2381;&#2352;&#2375;&#2344;&#2367;&#2351;&#2344;]]
@@ -83,9 +83,9 @@
 *{{ne}}: [[&#2351;&#2369;&#2325;&#2381;&#2352;&#2375;&#2344;&#2368;]]
 *{{no}}: [[Ukrainsk]]
 *{{oc}}: [[Ucraïnès]]
-*{{pl}}: [[j&#281;zyk]] [[ukrai&#324;ski]] {{m}}
+*{{pl}}: [[j&#281;zyk]] [[ukrai&#324;ski]] ''m''
 *{{pt}}: [[Ucraniano]]
-*{{ro}}: [[ucrainian&#259;]] {{f}}
+*{{ro}}: [[ucrainian&#259;]] ''f''
 *{{ru}}: [[&#1059;&#1082;&#1088;&#1072;&#1080;&#1085;&#1089;&#1082;&#1080;&#1081;]]
 *Sasxsek: [[ukrainski]]
 *{{sr}}: [[&#1091;&#1082;&#1088;&#1072;&#1080;&#1085;&#1089;&#1082;&#1080;]], [[&#1059;&#1082;&#1088;&#1072;&#1080;&#1085;&#1089;&#1082;&#1080;]], [[&#1059;&#1082;&#1088;&#1072;&#1112;&#1080;&#1085;&#1089;&#1082;&#1080;]]
@@ -111,13 +111,13 @@
 === Adjective ===
 '''Ukrainian'''
 
-# relating to [[Ukraine]] or its people
+# Relating to [[Ukraine]] or its people.
 
 ==== translations ====
 
 *{{zh}}: [[乌克兰的]]
 *{{fi}}: [[ukrainalainen]]
-*{{fr}}: [[ukrainien]]
+*{{fr}}: [[ukrainien]] ''m'', [[ukrainienne]] ''f''
 *{{de}}: [[ukrainisch]]
 *{{pl}}: [[ukraiński]] ''m''
 *{{ro}}: [[ucrainian]] ''m'', [[ucrainian&#259;]] ''f'', [[ucrainieni]] ''m pl'', [[ucrainiene]] ''f pl''
