--- a/wiki/Urdu.wikitext
+++ b/wiki/Urdu.wikitext
@@ -7,10 +7,12 @@
 From Turkish 'urdu', 'camp'. Same root as [[horde]].
 
 ===Translations===
+
 *Chinese: [[乌尔都语]] (wū'ěrdū-yǔ)
 *Dutch: [[Oerdoe]] ''n''
+*French: [[ourdou]] ''m''
 *Hindi: [[उर्दू]]
-*{{pt}}: [[Urdu]] {{m}}
+*{{pt}}: [[Urdu]] ''m''
 *Urdu: [[اردو|أردو]] (urdu)
 
 ===See Also===
@@ -19,7 +21,7 @@ From Turkish 'urdu', 'camp'. Same root as [[horde]].
 
 == Portuguese ==
 === Noun ===
-'''ur.du''' {{m}}
+'''ur.du''' ''m''
 
 # A [[Indo-Iranian]] language spoken in [[Pakistan]].
 
