Adjective: Relative to the Urdu language. <Urdu#38333>

--- a/wiki/Urdu.wikitext
+++ b/wiki/Urdu.wikitext
@@ -15,6 +15,15 @@ From Turkish 'urdu', 'camp'. Same root as [[horde]].
 *{{pt}}: [[Urdu]] ''m''
 *Urdu: [[اردو|أردو]] (urdu)
 
+=== Adjective ===
+
+# Relative to the Urdu language.
+
+==== Translations ====
+
+*French: [[ourdou]] ''m'', [[ourdoue]] ''f''
+*Hindi: [[उर्दू]]
+
 ===See Also===
 *Wikipedia entry on [[Wikipedia:Urdu]].
 *Wikipedia entry on [[Wikipedia:Urdu poetry]].
