--- a/wiki/Uzbek.wikitext
+++ b/wiki/Uzbek.wikitext
@@ -1,21 +1,24 @@
 ==English==
+
 ===Noun===
+
 #A person from [[Uzbekistan]] or of Uzbek descent.
 #:'''Translations'''
 #:*[[Chinese]] (simplified): [[乌兹别克人]]
-#:*[[French]]: [[Ouzbek]]
+#:*[[French]]: [[Ouzbek]] ''m'', [[Ouzbeke]] ''f''
 #:*[[German]]: [[Usbeke]] ''m'', [[Usbekin]] ''f''
 #:*[[Hebrew]]: [[אוזבקי]] ''m'', [[אוזבקית]] ''f''
 #:*[[Spanish]]: [[uzbeko]] ''m''
 #:*[[Ukrainian]]: [[узбек]] ''m'', [[узбечка]] ''f''
 
 ===Adjective===
+
 #Of, from, or pertaining to Uzbekistan, the Uzbek people or the Uzbek language.
 #:'''Translations'''
 #:*[[Bulgarian]]: [[узбекски]] ''m''
 #:*[[Chinese]] (simplified): [[乌兹别克的]]
 #:*{{nl}}: [[oesbeeks]]
-#:*[[French]]: [[ouzbek]]
+#:*[[French]]: [[ouzbek]] ''m'', [[ouzbeke]] ''f''
 #:*[[German]]: [[usbekisch]]
 #:*[[Spanish]]: [[uzbeko]]
 #:*[[Ukrainian]]: [[узбецький]] ''m'', [[узбецька]] ''f''
