added sanskrit <surfboard#66458>

--- a/wiki/surfboard.wikitext
+++ b/wiki/surfboard.wikitext
@@ -2,3 +2,7 @@
 ==Noun==
 
 A waterproof plank made of wood or foam and reinforced plastic, used to [[surf]] on waves.
+
+== Translations==
+[[Sanskrit]]
+[[तरंगफलक]]
