fr: [[Gallois]] ''m'' (1), [[Galloise]] ''f'' (1), [[gallois]] ''m'' (2) <Welsh#3812>

--- a/wiki/Welsh.wikitext
+++ b/wiki/Welsh.wikitext
@@ -10,7 +10,7 @@
 *[[Dutch]]: [[Wels]] ''n'', Welsh ''n''
 *[[Esperanto]]: [[kimra]]
 *Finnish: [[walesilainen]] (1), [[walesin kieli]] (2), [[kymri]] (2), [[kymrin kieli]] (2)
-*[[French]]: [[gallois]] ''m''
+*[[French]]: [[Gallois]] ''m'' (1), [[Galloise]] ''f'' (1), [[gallois]] ''m'' (2)
 *[[German]]: [[Walisisch]]
 *[[Hebrew]]: [[וולשית]]
 *[[Interlingua]]: [[gallese]]
