--- a/wiki/surf.wikitext
+++ b/wiki/surf.wikitext
@@ -1,8 +1,6 @@
-===English===
-==Verb==
-
-To ride a [[wave]], usually on a surfboard.
-
-==Noun==
-
-The part of the coast where waves break.
+==English==
+===Verb===
+#To ride a [[wave]], usually on a surfboard.
+#To browse the [[Internet]].
+===Noun===
+#The part of the coast where waves break.
