--- a/wiki/surfboard.wikitext
+++ b/wiki/surfboard.wikitext
@@ -1,8 +1,7 @@
-===English===
-==Noun==
-
-A waterproof plank made of wood or foam and reinforced plastic, used to [[surf]] on waves.
-
+==English==
+===Noun===
+'''Surfboard'''
+#A waterproof plank made of wood or foam and reinforced plastic, used to [[surf]] on waves.
 == Translations==
 [[Sanskrit]]
 [[तरंगफलक]]
