--- a/wiki/surfboard.wikitext
+++ b/wiki/surfboard.wikitext
@@ -2,6 +2,5 @@
 ===Noun===
 '''Surfboard'''
 #A waterproof plank made of wood or foam and reinforced plastic, used to [[surf]] on waves.
-== Translations==
-[[Sanskrit]]
-[[तरंगफलक]]
+===Translations===
+*Sanskrit: [[तरंगफलक]]
