/* Noun */ Refering to the specific global network. <Internet#671103>

--- a/wiki/Internet.wikitext
+++ b/wiki/Internet.wikitext
@@ -5,7 +5,8 @@
 ===Noun===
 '''internet'''
 
-#Any set of computer networks that are connected by [[internetworking]].
+#(''Rare'') Any set of computer networks that are connected by [[internetworking]].
+#Refering to the specific global network. Considered incorrect by some authorities who claim the proper noun should be used.
 
 ===Proper noun===
 '''Internet'''
