[http://sa.wikipedia.org Wikipedia in Sanskrit] <Sanskrit#66452>

--- a/wiki/Sanskrit.wikitext
+++ b/wiki/Sanskrit.wikitext
@@ -1,9 +1,16 @@
 {{-en-}}
+
 === Noun ===
+
 # A classical language important to [[Hinduism]], an official language of [[India]].
-===Translation===
+
+==== Translations ====
+
 *French: [[sanskrit]] ''m''
 *Hindi: [[संस्कृत]]
 *Sanskrit: [[संस्कृत]]
-===See Also===
+
+== See Also ==
+
 *[[w:Sanskrit|Sanskrit article]] in Wikipedia
+*[http://sa.wikipedia.org Wikipedia in Sanskrit]
