--- a/wiki/corruption.wikitext
+++ b/wiki/corruption.wikitext
@@ -1,6 +1,10 @@
+==English==
 ===Etymology===
 French ''corruption'', Latin ''[[corruptio]]''
+
 ===Noun===
+'''corruption''' (uncountable and countable; plural: [[corruptions]])
+
 #The act of corrupting or making [[putrid]], or state of being [[corrupt]] or putrid; decomposition or disorganization, in the process of putrefaction; [[putrefaction]]; [[deterioration]].
 #*The inducing and accelerating of putrefaction is a subject of very universal inquiry; for '''corruption''' is a reciprocal to generation. - [[Francis Bacon]].
 #The product of corruption; putrid matter.
@@ -8,10 +12,8 @@ French ''corruption'', Latin ''[[corruptio]]''
 #*It was necessary, by exposing the gross '''corruptions''' of monasteries, . . . to exite popular indignation against them. - [[Hallam]]
 #*They abstained from some of the worst methods of '''corruption''' usual to their party in its earlier days. - [[Bancroft]]
 #*'''Usage note:''' Corruption, when applied to officers, trustees, etc., signifies the inducing a violation of duty by means of pecuniary considerations. - [[Abbott]]
-#The act of changing, or of being changed, for the worse; departure from what is pure, simple, or correct; as, a corruption of style; corruption in language. 
-====Derived expressions====
-*'''Corruption of blood,''' ''(Law):'' taint or impurity of blood, in consequence of an act of attainder of treason or felony, by which a person is disabled from inheriting any estate or from transmitting it to others.
-**'''Corruption of blood''' can be removed only by act of Parliament. - [[Blackstone]]
+#The act of changing, or of being changed, for the worse; departure from what is pure, simple, or correct; as, a corruption of style; corruption in language.
+
 ====Synonyms====
 *[[putrescence]]
 *[[putrefaction]]
@@ -22,3 +24,7 @@ French ''corruption'', Latin ''[[corruptio]]''
 *[[adulteration]]
 *[[depravity]], which see
 *[[taint]]
+
+====Derived expressions====
+*'''Corruption of blood,''' ''(Law):'' taint or impurity of blood, in consequence of an act of attainder of treason or felony, by which a person is disabled from inheriting any estate or from transmitting it to others.
+**'''Corruption of blood''' can be removed only by act of Parliament. - [[Blackstone]]
