+see also; if you guys are going to fight over the terminology, please ensure that [[corruption]] and [[variant]] have definitions matching your intentions so we can see what you're striving for... <pr0n#66334>

--- a/wiki/pr0n.wikitext
+++ b/wiki/pr0n.wikitext
@@ -1,6 +1,9 @@
 ==English==
-
 ===Noun===
 '''pr0n'''
 
-#''(Internet slang):'' Corruption of [[porn]].
+#''(Internet slang):'' [[Corruption]] of [[porn]].
+
+===See also===
+*[[w:Internet slang|Wikipedia article on Internet slang]]
+*[[w:Leet|Wikipedia article on "leet"]]
