--- a/wiki/baa.wikitext
+++ b/wiki/baa.wikitext
@@ -1,8 +1,9 @@
 ==English==
+===Etymology===
+Compare German ''[[bäen]]''; an imitative word.
 ===Noun===
-'''baa'''
-
-#The [[characteristic]] [[cry]] of a [[sheep]].
+'''baa''', plural '''baas'''
+#The [[characteristic]] [[cry]] or [[bleating]] of a [[sheep]].
 
 ====Synonyms====
 *[[baaing]]
@@ -11,7 +12,6 @@
 
 ===Interjection===
 '''baa'''
-
 #The [[characteristic]] [[cry]] of a [[sheep]].
 
 ====Translations====
@@ -20,9 +20,8 @@
 
 ===Intransitive verb===
 '''baa'''
-
 #Of a sheep, to make its characteristic cry.
-
+#:He treble '''baas''' for help, but none can get. - Sir [[Philip Sidney]]
 ====Translations====
 *French: [[bêler]]
 *Italian: [[belare]]
