decapitalized (not a proper noun), translation section to level 4, wikify exotic language name; +etym & related <surfboard#66458>

--- a/wiki/surfboard.wikitext
+++ b/wiki/surfboard.wikitext
@@ -1,6 +1,16 @@
 ==English==
+===Etymology===
+[[surf]] + [[board]]
+
 ===Noun===
-'''Surfboard'''
+'''surfboard'''
+
 #A waterproof plank made of wood or foam and reinforced plastic, used to [[surf]] on waves.
-===Translations===
-*Sanskrit: [[तरंगफलक]]
+
+====Related terms====
+*[[surf]]
+*[[surfer]]
+*[[surfing]]
+
+====Translations====
+*[[Sanskrit]]: [[तरंगफलक]]
