turn gibberish into real article <espanjalainen#50962>

--- a/wiki/espanjalainen.wikitext
+++ b/wiki/espanjalainen.wikitext
@@ -1,30 +1,8 @@
-dsjkfbsjklgbfjfdkhndlfhdfs
-hgdflkhfdkjlhbsjhsdf
-hfdshdsfhkhlknfdlskhdsfHsdf
-hsdfh
-dfs
-hsdfj
-sd
-jfd
-hsdfhndlkfhnksfdh
-fdshjdfs;khjdkjfshslifdhgdfs
-hdfshkjfdskgshfdhlk
-dshdksfjhnkldsfjnhdh
-dsjusfdjdfh
-dfj
-sdj
-sd
-jsfd
-jsd
-fhjsdjsdj
-sfdjh
-sfd
-jsdf
-hjsdf
-jsd
-hjdsf
-hs
-dfhj
-sdf
-hjsd
-jsfd
+==Finnish==
+===Adjective===
+'''espanjalainen'''
+
+# [[Spanish]]
+
+====Related terms====
+*[[espanja]]
