--- a/wiki/agenda.wikitext
+++ b/wiki/agenda.wikitext
@@ -30,7 +30,7 @@ The word ''agenda'' is the Latin plural of ''agendum'', but in English the word 
 # agenda
 
 '''Example'''
-''hemlig agenda'' = ''hidden agenda'', a wish (and plan) to implement a particular idea whithout telling anybody even though people will be affected in a negative way.
+''hemlig agenda'' = ''hidden agenda'', a wish (and plan) to implement a particular idea without telling anybody even though people will be affected in a negative way.
 ----
 
 ==[[Romanica]]==
