--- a/wiki/fat.wikitext
+++ b/wiki/fat.wikitext
@@ -12,6 +12,7 @@
 #(''countable'') A refined substance chemically resembling the oils in animal fat.
 #That part of an organization deemed wasteful.
 #:''We need to trim the fat in this company''
+# Guys who get screwed.... Not in the good way.
 #(''countable''; ''obsolete'') A large tub, cistern, or vessel; a vat.
 
 ====Synonyms====
