/* Proper noun */ <macintosh#49349>

--- a/wiki/macintosh.wikitext
+++ b/wiki/macintosh.wikitext
@@ -2,7 +2,7 @@
 ===Proper noun===
 '''Macintosh'''&reg; (''plural'' '''Macintoshes''')
 
-#A brand of computer manufactured by Apple Computer, Inc.
+#A brand of computer manufactured by [http://www.apple.com/ Apple Computer, Inc.]
 
 ====Usage note====
 '''Macintosh''' is a registered trademark of Apple Computer, Inc (see [http://www.apple.com/legal/appletmlist.html]) and so should always be spelled with an initial capital.
