--- a/wiki/Lao.wikitext
+++ b/wiki/Lao.wikitext
@@ -5,12 +5,13 @@
 
 ====Translations====
 *Bulgarian: [[лаосец]] ''m''
-*[[Chinese]]:[[老挝人]](1),[[老挝语]](2)
-*[[French]]: [[Laotien]] ''m'' (1), [[Laotienne]] ''f'' (1), [[laotien]] ''m'' (2)
-*[[German]]: [[Laote]] ''m'' (1), [[Laotin]] ''f'' (1), Lao ''n'' (2)
+*Chinese:[[老挝人]](1),[[老挝语]](2)
+*French: [[Laotien]] ''m'' (1), [[Laotienne]] ''f'' (1), [[laotien]] ''m'' (2)
+*German: [[Laote]] ''m'' (1), [[Laotin]] ''f'' (1), Lao ''n'' (2)
+*Italian: [[laotiano]]
+*Japanese: [[ラオス人]]; [[ラオ語]], [[ラオス語]]
 *Lao: [[ລາວ]] (2)
 *[[Spanish]]: [[laosiano]] (1), lao ''pl'' (1), Lao (2)
-
 
 ===Adjective===
 #Of, from, or pertaining to Laos, the Lao people or the Lao language.
