--- a/wiki/cuadrado.wikitext
+++ b/wiki/cuadrado.wikitext
@@ -1,3 +1,3 @@
-Figura geométrica de cuatro lados iguales (igual medida) que forman entre sí [[ángulos]] rectos (de 90 grados).
+[[Figura geométrica]] de cuatro [[lados iguales]] (igual medida) que forman entre sí [[ángulos]] rectos (de 90 grados).
 
 Si "a" es la medida de los lados entonces la [[diagonal]] medirá <math>a*\sqrt{2}</math>, el [[área]] será de <math>a^2</math> y el perímetro de <math>4*a</math>
