--- a/wiki/Internet.wikitext
+++ b/wiki/Internet.wikitext
@@ -18,9 +18,13 @@
 *the [[Net]], the net, (''imprecisely'') the [[World Wide Web]], (''imprecisely'') the [[Web]]
 
 ====Translations====
+*Chinese: [[互联网]], [[因特网]]
 *[[Esperanto]]: [[Interreto]]
 *Finnish: Internet, [[netti]]
+*French: Internet ''f''
 *German: Internet
+*Italian: Internet ''f''
+*Japanese: [[インターネット]]
 *Hebrew: [[מרשתת]] (Mir'she'tet), [[אינטרנט]]
 
 ===See also===
