--- a/wiki/%E6%B5%85.wikitext
+++ b/wiki/%E6%B5%85.wikitext
@@ -15,13 +15,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#shallow, not deep
-*# superficial
+*# [[shallow]], not deep
+*# [[superficial]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -36,15 +36,46 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[淺]]
 
+===Compounds===
+*[[浅浅]]
+*[[浅薄]]
+*[[浅尝]]
+*[[浅淡]]
+*[[浅短]]
+*[[浅而易见]]
+*[[浅海]]
+*[[浅见]]
+*[[浅近]]
+*[[浅陋]]
+*[[浅露]]
+*[[浅明]]
+*[[浅儿]]
+*[[浅释]]
+*[[浅说]]
+*[[浅滩]]
+*[[浅显]]
+*[[浅鲜]]
+*[[浅笑]]
+*[[浅学]]
+*[[浅易]]
+*[[浅子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せん]] (sen)
 ** '''[[Kun]]''': [[あさい]] (asai)
+
+===Compounds===
+*[[浅学]]
+*[[浅薄]]
+*[[浅慮]]
+*[[浅葱]], [[浅葱色]]
+*[[浅瀬]]
 
 * '''Other info''':  
 
