--- a/wiki/%E8%89%B0.wikitext
+++ b/wiki/%E8%89%B0.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#difficult, hard
-*# distressing
+*# [[difficult]], [[hard]]
+*# [[distressing]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,17 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[艱]]
+
+===Compounds===
+*[[艰苦]]
+*[[艰苦卓绝]]
+*[[艰困]]
+*[[艰难]]
+*[[艰涩]]
+*[[艰深]]
+*[[艰危]]
+*[[艰险]]
+*[[艰辛]]
 
 * '''Other info''': 
 
