--- a/wiki/%E6%AD%BC.wikitext
+++ b/wiki/%E6%AD%BC.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': annihilate, wipe out, kill off
+* '''Common Meaning''': [[annihilate]], [[wipe out]], [[kill off]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,12 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[殲]]
+
+===Compounds===
+*[[歼击]]
+*[[歼击机]]
+*[[歼灭]]
+*[[歼灭战]]
 
 * '''Other info''': 
 
