original noun sense before later verb sense; +derived <surf#66459>

--- a/wiki/surf.wikitext
+++ b/wiki/surf.wikitext
@@ -1,6 +1,23 @@
 ==English==
+===Noun===
+'''surf''' (''uncountable'')
+
+#The part of the coast where waves break.
+
+<!-- derived from the noun -->
+====Derived terms====
+*[[surf rider]]<!-- older term for surfer -->
+
 ===Verb===
+'''to surf''' ([[surfs]], [[surfed]], [[surfing]])
+
 #To ride a [[wave]], usually on a surfboard.
 #To browse the [[Internet]].
-===Noun===
-#The part of the coast where waves break.
+
+<!-- derived from the verb -->
+====Derived terms====
+*[[surfer]]
+
+<!-- could be derived from noun or verb -->
+===Derived terms===
+*[[surfboard]]
