--- a/wiki/cami%C3%B3n.wikitext
+++ b/wiki/cami%C3%B3n.wikitext
@@ -1,1 +1,9 @@
-Vehículo con gran capacidad de carga. Puede tener dos o más ejes.
+==Spanish==
+===Noun===
+'''camión'''
+
+# [[truck]]
+# [[bus]] (''maybe only in Mexico'')
+
+====Related terms====
+*[[camioneta]]
