/* Related words */ tpyo <Zucker#38812>

--- a/wiki/Zucker.wikitext
+++ b/wiki/Zucker.wikitext
@@ -9,4 +9,4 @@
 * '''seinem Affen Zucker geben''' - accommodate his whims
 
 ====Related words====
-* [[Zuckrahorn]], [[Zuckerbäcker]], [[Zuckercouleur]], [[Zuckerguß]], etc
+* [[Zuckerahorn]], [[Zuckerbäcker]], [[Zuckercouleur]], [[Zuckerguß]], etc
