+obs syn <surfer#63949>

--- a/wiki/surfer.wikitext
+++ b/wiki/surfer.wikitext
@@ -5,6 +5,9 @@
 #A person who rides a [[surfboard]].
 #A person who [[surf]]s the [[Internet]].
 
+====Synonyms====
+*[[surf rider]] (''obsolete'')
+
 ====Translations====
 
 '''person who rides a surfboard'''
