derived before trans <surfer#63949>

--- a/wiki/surfer.wikitext
+++ b/wiki/surfer.wikitext
@@ -8,6 +8,9 @@
 ====Synonyms====
 *[[surf rider]] (''obsolete'')
 
+====Derived terms====
+*[[silver surfer]]
+
 ====Translations====
 
 '''person who rides a surfboard'''
@@ -39,6 +42,3 @@
 <!--Put translations for languages from J to Z here-->
 |}
 |}
-
-===Derived terms===
-*[[silver surfer]]
