--- a/wiki/curia.wikitext
+++ b/wiki/curia.wikitext
@@ -1,3 +1,9 @@
 ==English==
+===Noun===
+'''curia''' (''plural'' [[curiae]])
+----
+==Italian==
+===Noun===
+'''curia''' ''f'' (''plural'' [[curie]])
 
-Hi.
+# [[diocese]]
