--- a/wiki/special.wikitext
+++ b/wiki/special.wikitext
@@ -4,6 +4,9 @@
 *[[w:SAMPA|SAMPA]]: /"speS@l/
 *[[w:AHD|AHD]]: spĕsh'əl
 
+===Etymology===
+Latin ''[[specialis]]'' (< ''[[species]]'', ''speciei'')
+
 ===Adjective===
 '''special''' (more special, most special)
 
