--- a/wiki/%CE%AD%CE%BD%CF%84%CE%BF%CE%BC%CE%BF.wikitext
+++ b/wiki/%CE%AD%CE%BD%CF%84%CE%BF%CE%BC%CE%BF.wikitext
@@ -1,4 +1,9 @@
 ===Noun===
-'''έντομο''' ''n'' (''pl'' [[έντομα]])
+[[έντομο]] ''n'' (''pl'' [[έντομα]])
 
 #[[insect]]
+
+===Related Terms===
+*[[εντομοκτόνο]]
+*[[εντομοαπωθητικό]]
+*[[εντομοφάγο]]
