--- a/wiki/kilometer.wikitext
+++ b/wiki/kilometer.wikitext
@@ -19,7 +19,7 @@ km (''official [[SI]] symbol''), Km (''chiefly American, in non-scientific usage
 *Chinese: [[千米]] (qianmi), [[公里]] (gongli)
 *Czech: [[kilometr]] ''m''
 *French: [[kilomètre]] ''m''
-*German: Kilometer ''m''
+*German: [[Kilometer]] ''m''
 *Greek: [[χιλιόμετρο]]
 *[[Interlingua]]: [[kilometro]]
 *Italian: [[chilometro]] ''m''
