--- a/wiki/Byzantine.wikitext
+++ b/wiki/Byzantine.wikitext
@@ -9,7 +9,8 @@ BA&Iuml;-zahn-tyn
 [[Byzantium|Byzant(ium)]], now [[Istanbul]] + [[-ine]]
 === Noun ===
 
-#(''Archaic'') A native of [[Byzantium]], now [[Istanbul]]
+#(''Archaic'') A native of [[Byzantium]] which was in the same place as is now [[Istanbul]]
+#(''Historic'') What belongs to the civilization of the East-Roman empire, as it was established after 331 A.D. when the capital was moved to Konstantinoupolis (now [[Instanbul]]) and up to 1453 when it was conquerd by the Turks.
 # Complex or intricate
 
 ====Translations====
