--- a/wiki/Byzantine.wikitext
+++ b/wiki/Byzantine.wikitext
@@ -6,7 +6,8 @@
 BA&Iuml;-zahn-tyn
 ===Etymology===
 
-[[Byzantium|Byzant(ium)]], now [[Istanbul]] + [[-ine]]
+[[Byzantium|Byzant(ium)]]
+
 === Noun ===
 
 #(''Archaic'') A native of [[Byzantium]] which was in the same place as is now [[Istanbul]]
