--- a/wiki/Byzantine.wikitext
+++ b/wiki/Byzantine.wikitext
@@ -20,7 +20,7 @@ BA&Iuml;-zahn-tyn
 *[[Latin]]: [[Byzantina]] ''f'', [[Byzantinus]] ''m''
 
 ===Adjective===
-#(archaic) Of or pertaining to [[Byzantium]], now [[Istanbul]]
+#(archaic) Of or pertaining to [[Byzantium]]
 
 ====Translations====
 
