--- a/wiki/braccio.wikitext
+++ b/wiki/braccio.wikitext
@@ -1,5 +1,11 @@
 ==Italian==
+===Etymology===
+Latin ''[[brachium]]''
 ===Noun===
 '''braccio''' ''m'' (''plurals'' '''braccia''' ''f'' (''anatomical''), '''bracci''' ''m'' (''of the sea''))
 
 #[[arm]] (''anatomical, of the sea'')
+
+===Related terms===
+*[[braccetto]]
+*[[bracciatura]]
