--- a/wiki/breve.wikitext
+++ b/wiki/breve.wikitext
@@ -11,3 +11,19 @@ From Latin '''[[brevis]]''', ''short''
 *[[longa]]
 *[[semibreve]]
 *[[whole note]]
+
+----
+==Italian==
+===Adjective===
+'''breve'''
+
+# [[brief]], [[short]]
+
+===Synonym===
+*[[corto]]
+
+===Antonym===
+*[[lungo]]
+
+===Related terms===
+*[[brevità]]
