--- a/wiki/breve.wikitext
+++ b/wiki/breve.wikitext
@@ -1,15 +1,19 @@
-==Etymology==
-From Latin '''[[brevis]]''', ''short''
-
 ==English==
+===Etymology===
+From Latin '''[[brevis]]''', ''short''
+===Noun===
 '''breve''', plural '''[[breves]]'''
 
 # ''(Music)'': [[whole note]]
 
 ===Related Terms===
+*[[brevity]]
+*[[brief]]
+*[[semibreve]]
+
+===See also===
 *[[half note]]
 *[[longa]]
-*[[semibreve]]
 *[[whole note]]
 
 ----
