--- a/wiki/mente.wikitext
+++ b/wiki/mente.wikitext
@@ -4,10 +4,18 @@
 
 # [[mind]]
 
-===Related terms===
+====Related terms====
 *[[mentale]]
 *[[mentalità]]
 *[[mentire]]
+
+===Verb form===
+'''mente'''
+
+# third-person singular indicative present of [[mentire]]
+
+====Synonym====
+*[[mentisce]]
 
 ===See also===
 *[[-mente]]
