--- a/wiki/font.wikitext
+++ b/wiki/font.wikitext
@@ -20,7 +20,7 @@ Latin: ''fons'': fountain.
 *[[fount]]
 
 ====Etymology====
-Old French: ''fondre'': to melt.
+Old French ''[[fondre]]'': to melt.
 
 ====Translations====
 *Danish: [[skrifttype]] ''c''
