--- a/wiki/rich.wikitext
+++ b/wiki/rich.wikitext
@@ -15,6 +15,7 @@
 * ''(money)'' [[poor]]
 
 ===Translations===
+*Catalan: [[ric]] [[:ca:ric|(ca)]]
 *Chinese: [[富的]], [[富裕的]]
 *French: [[riche]]
 *Italian: [[ricco]] ''m'', [[ricca]] ''f''
@@ -23,4 +24,4 @@
 * {{ro}}: [[bogat]] ''m'', [[bogată]] ''f'', [[avut]] ''m'', [[avută]] ''f''
 * {{ru}}: [[богатый]]
 * Spanish: [[rico]] ''m'', [[rica]] ''f''
-German: reich
+German: [[reich]] [[:de:reich|(de)]]
