--- a/wiki/rich.wikitext
+++ b/wiki/rich.wikitext
@@ -24,4 +24,4 @@
 * {{ro}}: [[bogat]] ''m'', [[bogată]] ''f'', [[avut]] ''m'', [[avută]] ''f''
 * {{ru}}: [[богатый]]
 * Spanish: [[rico]] ''m'', [[rica]] ''f''
-German: [[reich]] [[:de:reich|(de)]]
+*German: [[reich]] [[:de:reich|(de)]]
