--- a/wiki/rich.wikitext
+++ b/wiki/rich.wikitext
@@ -1,15 +1,13 @@
 ==English==
-
 ===Adjective===
-''rich''
+'''rich'''
 
 # Having a lot of money and possessions
-# Having an intense flavor
+# Having an intense flavour
 
 ===Synonyms===
 *[[wealthy]]
 *[[well off]]
-
 
 ===Antonyms===
 * ''(money)'' [[poor]]
@@ -18,10 +16,10 @@
 *Catalan: [[ric]] [[:ca:ric|(ca)]]
 *Chinese: [[富的]], [[富裕的]]
 *French: [[riche]]
+*German: [[reich]] [[:de:reich|(de)]]
 *Italian: [[ricco]] ''m'', [[ricca]] ''f''
 *Japanese: [[豊かな]] ([[ゆたかな]])
 * Latin: [[dives]]
 * {{ro}}: [[bogat]] ''m'', [[bogată]] ''f'', [[avut]] ''m'', [[avută]] ''f''
 * {{ru}}: [[богатый]]
 * Spanish: [[rico]] ''m'', [[rica]] ''f''
-*German: [[reich]] [[:de:reich|(de)]]
